alignment fixed for mobile

--- a/style.css
+++ b/style.css
@@ -97,45 +97,48 @@
 @media (max-width: 480px) {
     .container{
         width:100%;
-        max-width: 80vh;
+        max-width:480px;
+        min-width: 360px;
         padding: 10px;
-        max-height: 1200px;
+        max-height: 1000px;
     }
 
     .calculator{
-        width:100%;
-        max-width: 300px;
-        margin-left: 3%;
-        margin-top: 5%;
+        width:max-content;
+        height: 1200px;
+        margin: 0px auto;
+        padding: 20px;
+        position: relative;
+        left: 0%;
+        right: 20%;
+        top: 2%;
     }
     .calculator img{
-         display:none;  
+         position: absolute;
+         left: -50%;
+         top:23%;
     }
     .calculator h1{
         font-size: 35px;
     }
     .calculator p{
         font-size: 16px;
+        margin-right: 30%;
     }
     .input-box{
-        margin: 20px 0;
-        padding: 10px;
-        margin-right: 5%;
-        height: 30px;
-    }
-    .input-box input{
-        margin-right: 5px;
-        padding: 8px;
-        text-align: left;
-
-        font-size: 14px;
-    }    
-    .input-box button{
-        padding: 8px 10px;
-        height:35px;
-        font-weight: 200;
-        font-size: 16px;
+        width:250px;
+        margin: 10px;
     } 
+    .input-box input{
+        text-align: left;
+        font-size: 10px; 
+    }
+    #date{
+        margin-right: 5%;
+        padding-left: 7%;
+        padding-right: 5px;
+
+    }    
     #result{
         font-size: 15px;
     }
@@ -149,7 +152,7 @@
     .calculator{
         width:100%;
         max-width: 400px;
-        /* max-width: 700px; */
+        max-width: 700px; 
         padding:20px;
         margin-left: 2%;
     }
@@ -169,7 +172,7 @@
         height: 20px;
     }
     .input-box input{
-        /* margin-right: 5px; */
+         margin-right: 5px; 
         padding: 5px 20px;
         text-align: left;
         font-size: 16px;
